[package]
name         = "oxidized-anvil"
version      = "0.2.0"
edition      = "2024"
authors      = ["Dogukan Metan <dogukanmetan@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/oxidized-mc/anvil"
homepage     = "https://github.com/oxidized-mc/anvil"
rust-version = "1.85"
readme       = "README.md"
documentation = "https://docs.rs/oxidized-anvil"
description  = "Anvil world format — RegionFile reader/writer, chunk serialization, level.dat"
keywords     = ["minecraft", "oxidized-mc"]
categories   = ["game-development"]

[dependencies]
oxidized-nbt         = "0.1.0-dev"
oxidized-types       = "0.1.0-dev"
oxidized-registry    = "0.1.0-dev"
oxidized-chunks      = "0.1.0-dev"
thiserror         = "2"
tokio             = { version = "1", features = ["rt"] }
tracing           = "0.1"
flate2            = "1"
lz4_flex          = "0.13"
ahash             = "0.8"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints.rust]
missing_docs   = "warn"
unsafe_code    = "deny"
unused_imports = "warn"

[lints.clippy]
# Correctness — hard errors
correctness                = { level = "deny", priority = -1 }
# Performance and style — warnings
perf                       = { level = "warn", priority = -1 }
style                      = { level = "warn", priority = -1 }
complexity                 = { level = "warn", priority = -1 }
suspicious                 = { level = "warn", priority = -1 }
# Specific useful lints
unwrap_used                = "deny"
expect_used                = "deny"
panic                      = "deny"
print_stdout               = "deny"
print_stderr               = "deny"
needless_pass_by_value     = "warn"
redundant_clone            = "warn"
# Noisy lints intentionally suppressed
module_name_repetitions    = "allow"
must_use_candidate         = "allow"
cast_possible_truncation   = "allow"
cast_sign_loss             = "allow"
cast_possible_wrap         = "allow"
